@@ -10,6 +10,11 @@ DESIGN ISSUES
 - is range of E-field is too large to make E-Field Detector vector length vary proportionally?
 
 HIGH PRIORITY
+- properly initialize "Show Values" in field detector
+- init and Reset All for field detector
+- vectors in field detector
+- simplified field detector for Introduction tab
+- field detector body jerks up to upper-left of play area sometimes when dragging
 - rotate field detector probe by -mvt.getYaw(), handle wire connection
 - get voltmeter and E-field detector working without 3D perspective, then work on 3D
 - BatteryCapacitorCircuitChangeListeners is inefficient/incomplete/incorrect
