@@ -59,6 +59,7 @@ title.meters=Meters
 title.electricField=Electric Field
 
 units.volts=V
+units.voltsPerMeter=V/m
 units.millimeters=mm
 units.millimetersSquared=mm<sup>2</sup>
 units.coulombs=C
